# cs1950u_dev_stencil

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
Resources/Models/Samples/Spider/: spider.mtl
Resources/Shaders/: phong_frag.glsl  phong_vert.glsl  skinned_vert.glsl
src/: Core.cpp  Core.h  Debug.h  UI.cpp  UI.h  Util.h  Window.cpp  Window.h
src/render/: Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  MaterialConstants.h  Mesh.cpp  Mesh.h  Primitive.cpp  Primitive.h  Shaders.cpp  Shaders.h  SkeletalMesh.cpp  SkeletalMesh.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
src/render/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Quad.cpp  Quad.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  mesh.cpp  mesh.h
